--- a/asm/68AD.html
+++ b/asm/68AD.html
@@ -41,7 +41,7 @@ Next: <a href="68E8.html">68E8</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="6AAC.html">6AAC</a>, <a href="6C00.html">Game_Loop</a>, <a href="6E18.html">6E18</a>, <a href="763C.html">Handler_Fuel</a> and <a href="76D7.html">Handler_GhostRider</a>.
+Used by the routines at <a href="6AAC.html">6AAC</a>, <a href="6C00.html">Game_Loop</a>, <a href="6E18.html">Handler_GameOver</a>, <a href="763C.html">Handler_Fuel</a> and <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
