--- a/asm/6996.html
+++ b/asm/6996.html
@@ -54,7 +54,7 @@ Used by the routine at <a href="69BE.html">69BE</a>.
 <tr>
 <td class="address-1"><span id="6997"></span>6997</td>
 <td class="instruction">LD A,($7828)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="7828.html">7828</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="7828.html">PlayerInput</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
