--- a/asm/6AAC.html
+++ b/asm/6AAC.html
@@ -116,7 +116,7 @@ Used by the routine at <a href="6C00.html">Game_Loop</a>.
 <span id="6ac9"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="6B4C.html">6B4C</a>.
+This entry point is used by the routine at <a href="6B4C.html">Handler_PlayerMovement</a>.
 </div>
 </div>
 </td>
@@ -346,7 +346,7 @@ This entry point is used by the routine at <a href="6B4C.html">6B4C</a>.
 <span id="6b10"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="6B4C.html">6B4C</a>.
+This entry point is used by the routine at <a href="6B4C.html">Handler_PlayerMovement</a>.
 </div>
 </div>
 </td>
