--- a/asm/6C00.html
+++ b/asm/6C00.html
@@ -186,7 +186,7 @@ Used by the routines at <a href="EBF3.html">WaitForNextFrame</a> and <a href="EC
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6c2b"></span>6C2B</td>
-<td class="instruction">JP NZ,<a href="6E18.html">$6E18</a></td>
+<td class="instruction">JP NZ,<a href="6E18.html">Handler_GameOver</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
@@ -276,7 +276,7 @@ Used by the routines at <a href="EBF3.html">WaitForNextFrame</a> and <a href="EC
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6c55"></span>6C55</td>
-<td class="instruction">CALL <a href="6B4C.html">$6B4C</a></td>
+<td class="instruction">CALL <a href="6B4C.html">Handler_PlayerMovement</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
@@ -420,7 +420,7 @@ Used by the routines at <a href="EBF3.html">WaitForNextFrame</a> and <a href="EC
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="6c85"></span>6C85</td>
-<td class="instruction">CALL <a href="6B4C.html">$6B4C</a></td>
+<td class="instruction">CALL <a href="6B4C.html">Handler_PlayerMovement</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
