--- a/asm/6D28.html
+++ b/asm/6D28.html
@@ -41,7 +41,7 @@ Next: <a href="6D49.html">6D49</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="6B4C.html">6B4C</a>.
+Used by the routine at <a href="6B4C.html">Handler_PlayerMovement</a>.
 </div>
 </div>
 </td>
