--- a/asm/6D49.html
+++ b/asm/6D49.html
@@ -66,7 +66,7 @@ Used by the routines at <a href="6AAC.html">6AAC</a> and <a href="76D7.html">Han
 <span id="6d50"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routines at <a href="6C00.html">Game_Loop</a>, <a href="6E18.html">6E18</a> and <a href="763C.html">Handler_Fuel</a>.
+This entry point is used by the routines at <a href="6C00.html">Game_Loop</a>, <a href="6E18.html">Handler_GameOver</a> and <a href="763C.html">Handler_Fuel</a>.
 </div>
 </div>
 </td>
