--- a/asm/7311.html
+++ b/asm/7311.html
@@ -48,8 +48,8 @@ Used by the routine at <a href="6C00.html">Game_Loop</a>.
 </tr>
 <tr>
 <td class="address-2"><span id="7311"></span>7311</td>
-<td class="instruction">CALL <a href="6B2D.html">Handler: PlayerSprite</a></td>
-<td class="comment-1" rowspan="1">Call <a href="6B2D.html">Handler: PlayerSprite</a>.</td>
+<td class="instruction">CALL <a href="6B2D.html">Handler_PlayerSprite</a></td>
+<td class="comment-1" rowspan="1">Call <a href="6B2D.html">Handler_PlayerSprite</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
