--- a/asm/76D7.html
+++ b/asm/76D7.html
@@ -507,8 +507,8 @@ This entry point is used by the routine at <a href="EC2A.html">EC2A</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="7766"></span>7766</td>
-<td class="instruction">CALL <a href="6B2D.html">Handler: PlayerSprite</a></td>
-<td class="comment-1" rowspan="1">Call <a href="6B2D.html">Handler: PlayerSprite</a>.</td>
+<td class="instruction">CALL <a href="6B2D.html">Handler_PlayerSprite</a></td>
+<td class="comment-1" rowspan="1">Call <a href="6B2D.html">Handler_PlayerSprite</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -703,8 +703,8 @@ This entry point is used by the routine at <a href="EC2A.html">EC2A</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="779f"></span>779F</td>
-<td class="instruction">JP <a href="6E18.html#6ed4">$6ED4</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="6E18.html#6ed4">6ED4</a>.</td>
+<td class="instruction">JP <a href="6E18.html#6ed4">Handler_GameOver_8</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="6E18.html#6ed4">Handler_GameOver_8</a>.</td>
 </tr>
 <tr>
 <td class="asm-label">Handler_GhostRider_10</td>
