--- a/asm/8000.html
+++ b/asm/8000.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="78E0.html">78E0</a>
+Prev: <a href="7900.html">7900</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#8000">Map</a></td>
 <td class="next">
@@ -1529,7 +1529,7 @@ Next: <a href="8960.html">8960</a>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="78E0.html">78E0</a>
+Prev: <a href="7900.html">7900</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#8000">Map</a></td>
 <td class="next">
