--- a/asm/B4BC.html
+++ b/asm/B4BC.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wheelie: Game status buffer entry at 7828</title>
+<title>Wheelie: Game status buffer entry at B4BC</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../wheelie.css" />
 <link rel="stylesheet" type="text/css" href="../skoolkit.css" />
@@ -27,65 +27,51 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="7827.html">7827</a>
+Prev: <a href="B4B3.html">B4B3</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#7828">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#b4bc">Map</a></td>
 <td class="next">
-Next: <a href="7829.html">7829</a>
+Next: <a href="B4DC.html">B4DC</a>
 </td>
 </tr>
 </table>
-<div class="description">7828: Player Input</div>
+<div class="description">B4BC: Game status buffer entry at B4BC</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
-<div class="paragraph">
-Relates to the direction for the current player input. <table class="default">
-<tr>
-<th colspan="1" rowspan="1">Byte</th>
-<th colspan="1" rowspan="1">Meaning</th>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">00</td>
-<td class="centre" colspan="1" rowspan="1">No input</td>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">01</td>
-<td class="centre" colspan="1" rowspan="1">Right</td>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">02</td>
-<td class="centre" colspan="1" rowspan="1">Left</td>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">04</td>
-<td class="centre" colspan="1" rowspan="1">Down</td>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">08</td>
-<td class="centre" colspan="1" rowspan="1">Up</td>
-</tr>
-</table>
-</div>
 </div>
 </td>
 </tr>
 <tr>
-<td class="asm-label">PlayerInput</td>
-<td class="address-1"><span id="7828"></span>7828</td>
-<td class="instruction">DEFB $07</td>
+<td class="address-1"><span id="b4bc"></span>B4BC</td>
+<td class="instruction">DEFB $A7,$A6,$A5,$A4,$A3,$A2,$A1,$A0</td>
+<td class="comment-0" rowspan="1"></td>
+</tr>
+<tr>
+<td class="address-1"><span id="b4c4"></span>B4C4</td>
+<td class="instruction">DEFB $9F,$A5,$A4,$A3,$A2,$A1,$A0,$9F</td>
+<td class="comment-0" rowspan="1"></td>
+</tr>
+<tr>
+<td class="address-1"><span id="b4cc"></span>B4CC</td>
+<td class="instruction">DEFB $9E,$A3,$A2,$A1,$A0,$9F,$9E,$9D</td>
+<td class="comment-0" rowspan="1"></td>
+</tr>
+<tr>
+<td class="address-1"><span id="b4d4"></span>B4D4</td>
+<td class="instruction">DEFB $00,$00,$00,$00,$00,$00,$00,$00</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="7827.html">7827</a>
+Prev: <a href="B4B3.html">B4B3</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#7828">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#b4bc">Map</a></td>
 <td class="next">
-Next: <a href="7829.html">7829</a>
+Next: <a href="B4DC.html">B4DC</a>
 </td>
 </tr>
 </table>
@@ -94,7 +80,7 @@ Next: <a href="7829.html">7829</a>
 <div class="copyright">&copy; 1983 Microsphere &copy; 2024 ArcadeGeek LTD.</div>
 <div class="created">Created using <a href="https://skoolkit.ca">SkoolKit</a> 9.6.</div>
 <div class="repository">Link to <a rel="noopener nofollow" href="https://github.com/pobtastic/wheelie/">Source code</a>.</div>
-<div><a href="../dec/asm/30760.html">Switch to decimal</a>.</div>
+<div><a href="../dec/asm/46268.html">Switch to decimal</a>.</div>
 </footer>
 </body>
 </html>
