--- a/asm/E84D.html
+++ b/asm/E84D.html
@@ -88,7 +88,7 @@ Used by the routine at <a href="72C3.html">72C3</a>.
 <tr>
 <td class="address-2"><span id="e85c"></span>E85C</td>
 <td class="instruction">LD A,($7828)</td>
-<td class="comment-1" rowspan="3">Return if bit 4 of *<a href="7828.html">7828</a> is zero.</td>
+<td class="comment-1" rowspan="3">Return if bit 4 of *<a href="7828.html">PlayerInput</a> is zero.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="e85f"></span>E85F</td>
