--- a/dec/asm/26924.html
+++ b/dec/asm/26924.html
@@ -41,7 +41,7 @@ Next: <a href="27026.html">27026</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="27437.html">Handler: PlayerSprite</a> and <a href="30423.html">Handler_GhostRider</a>.
+Used by the routines at <a href="27437.html">Handler_PlayerSprite</a> and <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 <table class="input">
@@ -145,6 +145,14 @@ This is quite clever, and very subtle. It's probably easier here to show example
 <tr>
 <th colspan="1" rowspan="1">Input Value</th>
 <th colspan="1" rowspan="1">Output in <span class="register">HL</span></th>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">13</td>
+<td class="centre" colspan="1" rowspan="1"><a href="48640.html#48666">48666</a></td>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">18</td>
+<td class="centre" colspan="1" rowspan="1"><a href="48640.html#48676">48676</a></td>
 </tr>
 <tr>
 <td class="centre" colspan="1" rowspan="1">135</td>
