--- a/dec/asm/27030.html
+++ b/dec/asm/27030.html
@@ -54,7 +54,7 @@ Used by the routine at <a href="27070.html">27070</a>.
 <tr>
 <td class="address-1"><span id="27031"></span>27031</td>
 <td class="instruction">LD A,(30760)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30760.html">30760</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30760.html">PlayerInput</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
