--- a/dec/asm/27308.html
+++ b/dec/asm/27308.html
@@ -116,7 +116,7 @@ Used by the routine at <a href="27648.html">Game_Loop</a>.
 <span id="27337"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="27468.html">27468</a>.
+This entry point is used by the routine at <a href="27468.html">Handler_PlayerMovement</a>.
 </div>
 </div>
 </td>
@@ -346,7 +346,7 @@ This entry point is used by the routine at <a href="27468.html">27468</a>.
 <span id="27408"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="27468.html">27468</a>.
+This entry point is used by the routine at <a href="27468.html">Handler_PlayerMovement</a>.
 </div>
 </div>
 </td>
