--- a/dec/asm/27437.html
+++ b/dec/asm/27437.html
@@ -41,13 +41,13 @@ Next: <a href="27460.html">27460</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="28184.html">28184</a>, <a href="29457.html">29457</a>, <a href="30268.html">Handler_Fuel</a> and <a href="30423.html">Handler_GhostRider</a>.
+Used by the routines at <a href="28184.html">Handler_GameOver</a>, <a href="29457.html">29457</a>, <a href="30268.html">Handler_Fuel</a> and <a href="30423.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
 </tr>
 <tr>
-<td class="asm-label">Handler: PlayerSprite</td>
+<td class="asm-label">Handler_PlayerSprite</td>
 <td class="address-2"><span id="27437"></span>27437</td>
 <td class="instruction">LD A,(30754)</td>
 <td class="comment-1" rowspan="1">Load <span class="register">A</span> with *<a href="30754.html">Speed</a>.</td>
@@ -80,10 +80,7 @@ Used by the routines at <a href="28184.html">28184</a>, <a href="29457.html">294
 <td class="asm-label">SetPlayerSpriteDirection</td>
 <td class="address-2"><span id="27448"></span>27448</td>
 <td class="instruction">LD C,7</td>
-<td class="comment-1" rowspan="1">Set 
-
-
-WHITE to <span class="register">C</span>.</td>
+<td class="comment-1" rowspan="1">Set WHITE to <span class="register">C</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
