--- a/dec/asm/27977.html
+++ b/dec/asm/27977.html
@@ -66,7 +66,7 @@ Used by the routines at <a href="27308.html">27308</a> and <a href="30423.html">
 <span id="27984"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routines at <a href="27648.html">Game_Loop</a>, <a href="28184.html">28184</a> and <a href="30268.html">Handler_Fuel</a>.
+This entry point is used by the routines at <a href="27648.html">Game_Loop</a>, <a href="28184.html">Handler_GameOver</a> and <a href="30268.html">Handler_Fuel</a>.
 </div>
 </div>
 </td>
