--- a/dec/asm/29457.html
+++ b/dec/asm/29457.html
@@ -48,8 +48,8 @@ Used by the routine at <a href="27648.html">Game_Loop</a>.
 </tr>
 <tr>
 <td class="address-2"><span id="29457"></span>29457</td>
-<td class="instruction">CALL <a href="27437.html">Handler: PlayerSprite</a></td>
-<td class="comment-1" rowspan="1">Call <a href="27437.html">Handler: PlayerSprite</a>.</td>
+<td class="instruction">CALL <a href="27437.html">Handler_PlayerSprite</a></td>
+<td class="comment-1" rowspan="1">Call <a href="27437.html">Handler_PlayerSprite</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
