--- a/dec/asm/30268.html
+++ b/dec/asm/30268.html
@@ -196,8 +196,8 @@ Start the "Out Of Fuel" sequence.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30317"></span>30317</td>
-<td class="instruction">CALL <a href="27437.html">Handler: PlayerSprite</a></td>
-<td class="comment-1" rowspan="1">Call <a href="27437.html">Handler: PlayerSprite</a>.</td>
+<td class="instruction">CALL <a href="27437.html">Handler_PlayerSprite</a></td>
+<td class="comment-1" rowspan="1">Call <a href="27437.html">Handler_PlayerSprite</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
