--- a/dec/asm/30423.html
+++ b/dec/asm/30423.html
@@ -507,8 +507,8 @@ This entry point is used by the routine at <a href="60458.html">60458</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30566"></span>30566</td>
-<td class="instruction">CALL <a href="27437.html">Handler: PlayerSprite</a></td>
-<td class="comment-1" rowspan="1">Call <a href="27437.html">Handler: PlayerSprite</a>.</td>
+<td class="instruction">CALL <a href="27437.html">Handler_PlayerSprite</a></td>
+<td class="comment-1" rowspan="1">Call <a href="27437.html">Handler_PlayerSprite</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -703,8 +703,8 @@ This entry point is used by the routine at <a href="60458.html">60458</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="30623"></span>30623</td>
-<td class="instruction">JP <a href="28184.html#28372">28372</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="28184.html#28372">28372</a>.</td>
+<td class="instruction">JP <a href="28184.html#28372">Handler_GameOver_8</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="28184.html#28372">Handler_GameOver_8</a>.</td>
 </tr>
 <tr>
 <td class="asm-label">Handler_GhostRider_10</td>
