--- a/dec/asm/59469.html
+++ b/dec/asm/59469.html
@@ -88,7 +88,7 @@ Used by the routine at <a href="29379.html">29379</a>.
 <tr>
 <td class="address-2"><span id="59484"></span>59484</td>
 <td class="instruction">LD A,(30760)</td>
-<td class="comment-1" rowspan="3">Return if bit 4 of *<a href="30760.html">30760</a> is zero.</td>
+<td class="comment-1" rowspan="3">Return if bit 4 of *<a href="30760.html">PlayerInput</a> is zero.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="59487"></span>59487</td>
