--- a/dec/asm/60587.html
+++ b/dec/asm/60587.html
@@ -157,8 +157,8 @@ Print "KEY IN 1ST CHARACTER OF CODE" to the screen.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="60619"></span>60619</td>
-<td class="instruction">CALL <a href="60526.html">PlayerInput</a></td>
-<td class="comment-1" rowspan="1">Call <a href="60526.html">PlayerInput</a>.</td>
+<td class="instruction">CALL <a href="60526.html">PlayerTypedInput</a></td>
+<td class="comment-1" rowspan="1">Call <a href="60526.html">PlayerTypedInput</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
@@ -329,8 +329,8 @@ Updates the number suffix in the messaging.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="60668"></span>60668</td>
-<td class="instruction">CALL <a href="60526.html">PlayerInput</a></td>
-<td class="comment-1" rowspan="1">Call <a href="60526.html">PlayerInput</a>.</td>
+<td class="instruction">CALL <a href="60526.html">PlayerTypedInput</a></td>
+<td class="comment-1" rowspan="1">Call <a href="60526.html">PlayerTypedInput</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
