--- a/dec/maps/data.html
+++ b/dec/maps/data.html
@@ -133,7 +133,15 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">224</td>
 <td class="map-b"><span id="30944"></span><a href="../asm/30944.html">30944</a></td>
 <td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30944.html">Data block at 78E0</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30944.html">Graphics: Carousel</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">121</td>
+<td class="map-byte">0</td>
+<td class="map-b"><span id="30976"></span><a href="../asm/30976.html">30976</a></td>
+<td class="map-b-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30976.html">Data block at 7900</a></div>
 </td>
 </tr>
 <tr>
@@ -166,14 +174,6 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-b"><span id="46080"></span><a href="../asm/46080.html">46080</a></td>
 <td class="map-b-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46080.html">Data block at B400</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">180</td>
-<td class="map-byte">220</td>
-<td class="map-w"><span id="46300"></span><a href="../asm/46300.html">46300</a></td>
-<td class="map-w-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46300.html">Actions Jump Table</a></div>
 </td>
 </tr>
 <tr>
