--- a/dec/maps/routines.html
+++ b/dec/maps/routines.html
@@ -129,7 +129,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="26752"></span><a href="../asm/26752.html">26752</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26752.html">Routine at 6880</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26752.html">Display Speedometer</a></div>
 </td>
 </tr>
 <tr>
@@ -237,7 +237,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="27468"></span><a href="../asm/27468.html">27468</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/27468.html">Routine at 6B4C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/27468.html">Handler: Player Movement</a></div>
 </td>
 </tr>
 <tr>
@@ -291,7 +291,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="28184"></span><a href="../asm/28184.html">28184</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28184.html">Routine at 6E18</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28184.html">Handler: Game Over</a></div>
 </td>
 </tr>
 <tr>
@@ -597,7 +597,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="60526"></span><a href="../asm/60526.html">60526</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60526.html">Player Input</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60526.html">Player Typed Input</a></div>
 </td>
 </tr>
 <tr>
