--- a/maps/all.html
+++ b/maps/all.html
@@ -277,7 +277,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">128</td>
 <td class="map-c"><span id="6880"></span><a href="../asm/6880.html">6880</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6880.html">Routine at 6880</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6880.html">Display Speedometer</a></div>
 </td>
 </tr>
 <tr>
@@ -509,7 +509,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">76</td>
 <td class="map-c"><span id="6b4c"></span><a href="../asm/6B4C.html">6B4C</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6B4C.html">Routine at 6B4C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6B4C.html">Handler: Player Movement</a></div>
 </td>
 </tr>
 <tr>
@@ -589,7 +589,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">24</td>
 <td class="map-c"><span id="6e18"></span><a href="../asm/6E18.html">6E18</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6E18.html">Routine at 6E18</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6E18.html">Handler: Game Over</a></div>
 </td>
 </tr>
 <tr>
@@ -1170,10 +1170,18 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">120</td>
+<td class="map-byte">39</td>
+<td class="map-g"><span id="7827"></span><a href="../asm/7827.html">7827</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7827.html">Game status buffer entry at 7827</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">120</td>
 <td class="map-byte">40</td>
 <td class="map-g"><span id="7828"></span><a href="../asm/7828.html">7828</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7828.html">Game status buffer entry at 7828</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7828.html">Player Input</a></div>
 </td>
 </tr>
 <tr>
@@ -1477,7 +1485,15 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">224</td>
 <td class="map-b"><span id="78e0"></span><a href="../asm/78E0.html">78E0</a></td>
 <td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/78E0.html">Data block at 78E0</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/78E0.html">Graphics: Carousel</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">121</td>
+<td class="map-byte">0</td>
+<td class="map-b"><span id="7900"></span><a href="../asm/7900.html">7900</a></td>
+<td class="map-b-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7900.html">Data block at 7900</a></div>
 </td>
 </tr>
 <tr>
@@ -1557,14 +1573,30 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">156</td>
 <td class="map-g"><span id="b49c"></span><a href="../asm/B49C.html">B49C</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B49C.html">Game status buffer entry at B49C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B49C.html">Table: Speedometer Attributes</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">180</td>
+<td class="map-byte">179</td>
+<td class="map-g"><span id="b4b3"></span><a href="../asm/B4B3.html">B4B3</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4B3.html">Game status buffer entry at B4B3</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">180</td>
+<td class="map-byte">188</td>
+<td class="map-g"><span id="b4bc"></span><a href="../asm/B4BC.html">B4BC</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4BC.html">Game status buffer entry at B4BC</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-page">180</td>
 <td class="map-byte">220</td>
-<td class="map-w"><span id="b4dc"></span><a href="../asm/B4DC.html">B4DC</a></td>
-<td class="map-w-desc">
+<td class="map-g"><span id="b4dc"></span><a href="../asm/B4DC.html">B4DC</a></td>
+<td class="map-g-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4DC.html">Actions Jump Table</a></div>
 </td>
 </tr>
@@ -1989,7 +2021,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">110</td>
 <td class="map-c"><span id="ec6e"></span><a href="../asm/EC6E.html">EC6E</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC6E.html">Player Input</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC6E.html">Player Typed Input</a></div>
 </td>
 </tr>
 <tr>
