--- a/maps/data.html
+++ b/maps/data.html
@@ -133,7 +133,15 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">224</td>
 <td class="map-b"><span id="78e0"></span><a href="../asm/78E0.html">78E0</a></td>
 <td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/78E0.html">Data block at 78E0</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/78E0.html">Graphics: Carousel</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">121</td>
+<td class="map-byte">0</td>
+<td class="map-b"><span id="7900"></span><a href="../asm/7900.html">7900</a></td>
+<td class="map-b-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/7900.html">Data block at 7900</a></div>
 </td>
 </tr>
 <tr>
@@ -166,14 +174,6 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-b"><span id="b400"></span><a href="../asm/B400.html">B400</a></td>
 <td class="map-b-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B400.html">Data block at B400</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">180</td>
-<td class="map-byte">220</td>
-<td class="map-w"><span id="b4dc"></span><a href="../asm/B4DC.html">B4DC</a></td>
-<td class="map-w-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4DC.html">Actions Jump Table</a></div>
 </td>
 </tr>
 <tr>
