--- a/maps/routines.html
+++ b/maps/routines.html
@@ -129,7 +129,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="6880"></span><a href="../asm/6880.html">6880</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6880.html">Routine at 6880</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6880.html">Display Speedometer</a></div>
 </td>
 </tr>
 <tr>
@@ -237,7 +237,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="6b4c"></span><a href="../asm/6B4C.html">6B4C</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6B4C.html">Routine at 6B4C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6B4C.html">Handler: Player Movement</a></div>
 </td>
 </tr>
 <tr>
@@ -291,7 +291,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="6e18"></span><a href="../asm/6E18.html">6E18</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6E18.html">Routine at 6E18</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/6E18.html">Handler: Game Over</a></div>
 </td>
 </tr>
 <tr>
@@ -597,7 +597,7 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-c"><span id="ec6e"></span><a href="../asm/EC6E.html">EC6E</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC6E.html">Player Input</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EC6E.html">Player Typed Input</a></div>
 </td>
 </tr>
 <tr>
