--- a/asm/6650.html
+++ b/asm/6650.html
@@ -41,7 +41,7 @@ Next: <a href="66F9.html">66F9</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="6AAC.html">6AAC</a>, <a href="6C00.html">Game_Loop</a> and <a href="6E18.html">6E18</a>.
+Used by the routines at <a href="6AAC.html">6AAC</a>, <a href="6C00.html">Game_Loop</a> and <a href="6E18.html">Handler_GameOver</a>.
 </div>
 </div>
 </td>
