--- a/asm/6880.html
+++ b/asm/6880.html
@@ -35,86 +35,126 @@ Next: <a href="6893.html">6893</a>
 </td>
 </tr>
 </table>
-<div class="description">6880: Routine at 6880</div>
+<div class="description">6880: Display Speedometer</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="6B4C.html">6B4C</a>.
+Used by the routine at <a href="6B4C.html">Handler_PlayerMovement</a>.
+</div>
+</div>
+<table class="input">
+<tr class="asm-input-header">
+<th colspan="2">Input</th>
+</tr>
+<tr>
+<td class="register">A</td>
+<td class="register-desc">The speed value</td>
+</tr>
+<tr>
+<td class="register">DE</td>
+<td class="register-desc">Points to 5A45 (the attribute buffer location of the speedometer)</td>
+</tr>
+</table>
+</td>
+</tr>
+<tr>
+<td class="asm-label">DisplaySpeedometer</td>
+<td class="address-2"><span id="6880"></span>6880</td>
+<td class="instruction">BIT 7,A</td>
+<td class="comment-1" rowspan="2">Jump to <a href="6880.html#6885">ProcessSpeedValue</a> if the speed value is negative.</td>
+</tr>
+<tr>
+<td class="asm-label"></td>
+<td class="address-1"><span id="6882"></span>6882</td>
+<td class="instruction">JR NZ,<a href="6880.html#6885">ProcessSpeedValue</a></td>
+</tr>
+<tr>
+<td class="asm-label"></td>
+<td class="address-1"><span id="6884"></span>6884</td>
+<td class="instruction">CPL</td>
+<td class="comment-1" rowspan="1">Make the position speed value into a negative.</td>
+</tr>
+<tr>
+<td class="routine-comment" colspan="5">
+<span id="6885"></span>
+<div class="comments">
+<div class="paragraph">
+Strip off the signed bit.
 </div>
 </div>
 </td>
 </tr>
 <tr>
-<td class="address-2"><span id="6880"></span>6880</td>
-<td class="instruction">BIT 7,A</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="address-1"><span id="6882"></span>6882</td>
-<td class="instruction">JR NZ,<a href="6880.html#6885">$6885</a></td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="address-1"><span id="6884"></span>6884</td>
-<td class="instruction">CPL</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
+<td class="asm-label">ProcessSpeedValue</td>
 <td class="address-2"><span id="6885"></span>6885</td>
-<td class="instruction">AND $7F</td>
-<td class="comment-0" rowspan="1"></td>
+<td class="instruction">AND %01111111</td>
+<td class="comment-1" rowspan="1">Keep only bits 0-6.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="6887"></span>6887</td>
 <td class="instruction">RRA</td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="2">Divide the speed value by two and store the result in <span class="register">L</span> (scaled speed value).</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="6888"></span>6888</td>
 <td class="instruction">LD L,A</td>
-<td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="6889"></span>6889</td>
 <td class="instruction">LD A,$A7</td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Set the base offset value in <span class="register">A</span> of A7.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="688b"></span>688B</td>
 <td class="instruction">NOP</td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="4">No operation.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="688c"></span>688C</td>
 <td class="instruction">NOP</td>
-<td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="688d"></span>688D</td>
 <td class="instruction">NOP</td>
-<td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="688e"></span>688E</td>
 <td class="instruction">NOP</td>
-<td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="688f"></span>688F</td>
 <td class="instruction">SUB L</td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="2">Update <span class="register">L</span> to A7 - the scaled speed value.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="6890"></span>6890</td>
 <td class="instruction">LD L,A</td>
-<td class="comment-0" rowspan="1"></td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="6891"></span>6891</td>
 <td class="instruction">LD H,$B4</td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Set <span class="register">H</span> to the high byte of the display data table.</td>
+</tr>
+<tr>
+<td class="routine-comment" colspan="5">
+<div class="comments">
+<div class="paragraph">
+Continue on to <a href="6893.html">CopyTwelveBytes</a>.
+</div>
+</div>
+</td>
 </tr>
 </table>
 <table class="asm-navigation">
