--- a/asm/692C.html
+++ b/asm/692C.html
@@ -41,7 +41,7 @@ Next: <a href="6992.html">6992</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="6B2D.html">Handler: PlayerSprite</a> and <a href="76D7.html">Handler_GhostRider</a>.
+Used by the routines at <a href="6B2D.html">Handler_PlayerSprite</a> and <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 <table class="input">
@@ -145,6 +145,14 @@ This is quite clever, and very subtle. It's probably easier here to show example
 <tr>
 <th colspan="1" rowspan="1">Input Value</th>
 <th colspan="1" rowspan="1">Output in <span class="register">HL</span></th>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">0D</td>
+<td class="centre" colspan="1" rowspan="1"><a href="BE00.html#be1a">BE1A</a></td>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">12</td>
+<td class="centre" colspan="1" rowspan="1"><a href="BE00.html#be24">BE24</a></td>
 </tr>
 <tr>
 <td class="centre" colspan="1" rowspan="1">87</td>
