--- a/asm/6B2D.html
+++ b/asm/6B2D.html
@@ -41,13 +41,13 @@ Next: <a href="6B44.html">6B44</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="6E18.html">6E18</a>, <a href="7311.html">7311</a>, <a href="763C.html">Handler_Fuel</a> and <a href="76D7.html">Handler_GhostRider</a>.
+Used by the routines at <a href="6E18.html">Handler_GameOver</a>, <a href="7311.html">7311</a>, <a href="763C.html">Handler_Fuel</a> and <a href="76D7.html">Handler_GhostRider</a>.
 </div>
 </div>
 </td>
 </tr>
 <tr>
-<td class="asm-label">Handler: PlayerSprite</td>
+<td class="asm-label">Handler_PlayerSprite</td>
 <td class="address-2"><span id="6b2d"></span>6B2D</td>
 <td class="instruction">LD A,($7822)</td>
 <td class="comment-1" rowspan="1">Load <span class="register">A</span> with *<a href="7822.html">Speed</a>.</td>
@@ -80,10 +80,7 @@ Used by the routines at <a href="6E18.html">6E18</a>, <a href="7311.html">7311</
 <td class="asm-label">SetPlayerSpriteDirection</td>
 <td class="address-2"><span id="6b38"></span>6B38</td>
 <td class="instruction">LD C,$07</td>
-<td class="comment-1" rowspan="1">Set 
-
-
-WHITE to <span class="register">C</span>.</td>
+<td class="comment-1" rowspan="1">Set WHITE to <span class="register">C</span>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
