--- a/asm/6CAA.html
+++ b/asm/6CAA.html
@@ -434,7 +434,7 @@ See <a href="E800.html">InitialiseDemoMode</a>.
 <span id="6d17"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="6E18.html">6E18</a>.
+This entry point is used by the routine at <a href="6E18.html">Handler_GameOver</a>.
 </div>
 </div>
 </td>
