--- a/asm/6F99.html
+++ b/asm/6F99.html
@@ -110,7 +110,7 @@ The parameters are; <table class="default">
 <td class="asm-label"></td>
 <td class="address-1"><span id="6fa4"></span>6FA4</td>
 <td class="instruction">LD A,($7828)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="7828.html">7828</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="7828.html">PlayerInput</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
