--- a/asm/7161.html
+++ b/asm/7161.html
@@ -55,8 +55,8 @@ Used by the routine at <a href="763C.html">Handler_Fuel</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="7164"></span>7164</td>
-<td class="instruction">JP <a href="6E18.html#6ed4">$6ED4</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="6E18.html#6ed4">6ED4</a>.</td>
+<td class="instruction">JP <a href="6E18.html#6ed4">Handler_GameOver_8</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="6E18.html#6ed4">Handler_GameOver_8</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
