--- a/asm/763C.html
+++ b/asm/763C.html
@@ -196,8 +196,8 @@ Start the "Out Of Fuel" sequence.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="766d"></span>766D</td>
-<td class="instruction">CALL <a href="6B2D.html">Handler: PlayerSprite</a></td>
-<td class="comment-1" rowspan="1">Call <a href="6B2D.html">Handler: PlayerSprite</a>.</td>
+<td class="instruction">CALL <a href="6B2D.html">Handler_PlayerSprite</a></td>
+<td class="comment-1" rowspan="1">Call <a href="6B2D.html">Handler_PlayerSprite</a>.</td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
