--- a/asm/7826.html
+++ b/asm/7826.html
@@ -31,7 +31,7 @@ Prev: <a href="7825.html">7825</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#7826">Map</a></td>
 <td class="next">
-Next: <a href="7828.html">7828</a>
+Next: <a href="7827.html">7827</a>
 </td>
 </tr>
 </table>
@@ -45,7 +45,7 @@ Next: <a href="7828.html">7828</a>
 </tr>
 <tr>
 <td class="address-1"><span id="7826"></span>7826</td>
-<td class="instruction">DEFB $00,$07</td>
+<td class="instruction">DEFB $00</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
@@ -56,7 +56,7 @@ Prev: <a href="7825.html">7825</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#7826">Map</a></td>
 <td class="next">
-Next: <a href="7828.html">7828</a>
+Next: <a href="7827.html">7827</a>
 </td>
 </tr>
 </table>
