--- a/asm/B4B3.html
+++ b/asm/B4B3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wheelie: Game status buffer entry at 7828</title>
+<title>Wheelie: Game status buffer entry at B4B3</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../wheelie.css" />
 <link rel="stylesheet" type="text/css" href="../skoolkit.css" />
@@ -27,65 +27,41 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="7827.html">7827</a>
+Prev: <a href="B49C.html">B49C</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#7828">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#b4b3">Map</a></td>
 <td class="next">
-Next: <a href="7829.html">7829</a>
+Next: <a href="B4BC.html">B4BC</a>
 </td>
 </tr>
 </table>
-<div class="description">7828: Player Input</div>
+<div class="description">B4B3: Game status buffer entry at B4B3</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
-<div class="paragraph">
-Relates to the direction for the current player input. <table class="default">
-<tr>
-<th colspan="1" rowspan="1">Byte</th>
-<th colspan="1" rowspan="1">Meaning</th>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">00</td>
-<td class="centre" colspan="1" rowspan="1">No input</td>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">01</td>
-<td class="centre" colspan="1" rowspan="1">Right</td>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">02</td>
-<td class="centre" colspan="1" rowspan="1">Left</td>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">04</td>
-<td class="centre" colspan="1" rowspan="1">Down</td>
-</tr>
-<tr>
-<td class="centre" colspan="1" rowspan="1">08</td>
-<td class="centre" colspan="1" rowspan="1">Up</td>
-</tr>
-</table>
-</div>
 </div>
 </td>
 </tr>
 <tr>
-<td class="asm-label">PlayerInput</td>
-<td class="address-1"><span id="7828"></span>7828</td>
-<td class="instruction">DEFB $07</td>
+<td class="address-1"><span id="b4b3"></span>B4B3</td>
+<td class="instruction">DEFB $00,$00,$00,$00,$00,$00,$00,$00</td>
+<td class="comment-0" rowspan="1"></td>
+</tr>
+<tr>
+<td class="address-1"><span id="b4bb"></span>B4BB</td>
+<td class="instruction">DEFB $00</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="7827.html">7827</a>
+Prev: <a href="B49C.html">B49C</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#7828">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#b4b3">Map</a></td>
 <td class="next">
-Next: <a href="7829.html">7829</a>
+Next: <a href="B4BC.html">B4BC</a>
 </td>
 </tr>
 </table>
@@ -94,7 +70,7 @@ Next: <a href="7829.html">7829</a>
 <div class="copyright">&copy; 1983 Microsphere &copy; 2024 ArcadeGeek LTD.</div>
 <div class="created">Created using <a href="https://skoolkit.ca">SkoolKit</a> 9.6.</div>
 <div class="repository">Link to <a rel="noopener nofollow" href="https://github.com/pobtastic/wheelie/">Source code</a>.</div>
-<div><a href="../dec/asm/30760.html">Switch to decimal</a>.</div>
+<div><a href="../dec/asm/46259.html">Switch to decimal</a>.</div>
 </footer>
 </body>
 </html>
