--- a/asm/B4DC.html
+++ b/asm/B4DC.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wheelie: Data at B4DC</title>
+<title>Wheelie: Game status buffer entry at B4DC</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../wheelie.css" />
 <link rel="stylesheet" type="text/css" href="../skoolkit.css" />
@@ -17,17 +17,17 @@ gtag('js', new Date());
 gtag('config', 'G-75RERFCHBG');
 </script>
 </head>
-<body class="Asm-w">
+<body class="Asm-g">
 <table class="header">
 <tr>
 <td class="logo"><a href="../index.html"><img alt="logo" src="../images/logo.png" /></a></td>
-<td class="page-header">Data</td>
+<td class="page-header">Game status buffer</td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="B49C.html">B49C</a>
+Prev: <a href="B4BC.html">B4BC</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#b4dc">Map</a></td>
 <td class="next">
@@ -92,7 +92,7 @@ Used by the routine at <a href="6A27.html">6A27</a>.
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="B49C.html">B49C</a>
+Prev: <a href="B4BC.html">B4BC</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#b4dc">Map</a></td>
 <td class="next">
