--- a/asm/EC6E.html
+++ b/asm/EC6E.html
@@ -35,7 +35,7 @@ Next: <a href="EC8C.html">EC8C</a>
 </td>
 </tr>
 </table>
-<div class="description">EC6E: Player Input</div>
+<div class="description">EC6E: Player Typed Input</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -47,7 +47,7 @@ Used by the routine at <a href="ECAB.html">CheckPassword</a>.
 </td>
 </tr>
 <tr>
-<td class="asm-label">PlayerInput</td>
+<td class="asm-label">PlayerTypedInput</td>
 <td class="address-2"><span id="ec6e"></span>EC6E</td>
 <td class="instruction">LD (IY+$07),$00</td>
 <td class="comment-1" rowspan="1">Write 00 (cursor type "C", "K" or "L") to *<a rel="noopener nofollow" href="https://skoolkit.ca/disassemblies/rom/hex/asm/5C41.html">MODE</a>.</td>
@@ -70,15 +70,15 @@ Used by the routine at <a href="ECAB.html">CheckPassword</a>.
 <td class="instruction">RES 5,(HL)</td>
 </tr>
 <tr>
-<td class="asm-label">PlayerInput_Loop</td>
+<td class="asm-label">PlayerTypedInput_Loop</td>
 <td class="address-2"><span id="ec7b"></span>EC7B</td>
 <td class="instruction">BIT 5,(HL)</td>
-<td class="comment-1" rowspan="2">Keep jumping back to <a href="EC6E.html#ec7b">PlayerInput_Loop</a> until a key was pressed.</td>
+<td class="comment-1" rowspan="2">Keep jumping back to <a href="EC6E.html#ec7b">PlayerTypedInput_Loop</a> until a key was pressed.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="ec7d"></span>EC7D</td>
-<td class="instruction">JR Z,<a href="EC6E.html#ec7b">PlayerInput_Loop</a></td>
+<td class="instruction">JR Z,<a href="EC6E.html#ec7b">PlayerTypedInput_Loop</a></td>
 </tr>
 <tr>
 <td class="routine-comment" colspan="5">
