--- a/dec/asm/26192.html
+++ b/dec/asm/26192.html
@@ -41,7 +41,7 @@ Next: <a href="26361.html">26361</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routines at <a href="27308.html">27308</a>, <a href="27648.html">Game_Loop</a> and <a href="28184.html">28184</a>.
+Used by the routines at <a href="27308.html">27308</a>, <a href="27648.html">Game_Loop</a> and <a href="28184.html">Handler_GameOver</a>.
 </div>
 </div>
 </td>
