--- a/dec/asm/27648.html
+++ b/dec/asm/27648.html
@@ -186,7 +186,7 @@ Used by the routines at <a href="60403.html">WaitForNextFrame</a> and <a href="6
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="27691"></span>27691</td>
-<td class="instruction">JP NZ,<a href="28184.html">28184</a></td>
+<td class="instruction">JP NZ,<a href="28184.html">Handler_GameOver</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
@@ -276,7 +276,7 @@ Used by the routines at <a href="60403.html">WaitForNextFrame</a> and <a href="6
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="27733"></span>27733</td>
-<td class="instruction">CALL <a href="27468.html">27468</a></td>
+<td class="instruction">CALL <a href="27468.html">Handler_PlayerMovement</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
@@ -420,7 +420,7 @@ Used by the routines at <a href="60403.html">WaitForNextFrame</a> and <a href="6
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="27781"></span>27781</td>
-<td class="instruction">CALL <a href="27468.html">27468</a></td>
+<td class="instruction">CALL <a href="27468.html">Handler_PlayerMovement</a></td>
 <td class="comment-1" rowspan="1"></td>
 </tr>
 <tr>
