--- a/dec/asm/27818.html
+++ b/dec/asm/27818.html
@@ -434,7 +434,7 @@ See <a href="59392.html">InitialiseDemoMode</a>.
 <span id="27927"></span>
 <div class="comments">
 <div class="paragraph">
-This entry point is used by the routine at <a href="28184.html">28184</a>.
+This entry point is used by the routine at <a href="28184.html">Handler_GameOver</a>.
 </div>
 </div>
 </td>
