--- a/dec/asm/27944.html
+++ b/dec/asm/27944.html
@@ -41,7 +41,7 @@ Next: <a href="27977.html">27977</a>
 <td class="routine-comment" colspan="5">
 <div class="details">
 <div class="paragraph">
-Used by the routine at <a href="27468.html">27468</a>.
+Used by the routine at <a href="27468.html">Handler_PlayerMovement</a>.
 </div>
 </div>
 </td>
