--- a/dec/asm/28569.html
+++ b/dec/asm/28569.html
@@ -110,7 +110,7 @@ The parameters are; <table class="default">
 <td class="asm-label"></td>
 <td class="address-1"><span id="28580"></span>28580</td>
 <td class="instruction">LD A,(30760)</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30760.html">30760</a>.</td>
+<td class="comment-1" rowspan="1"><span class="register">A</span>=*<a href="30760.html">PlayerInput</a>.</td>
 </tr>
 <tr>
 <td class="asm-label"></td>
