--- a/dec/asm/29025.html
+++ b/dec/asm/29025.html
@@ -55,8 +55,8 @@ Used by the routine at <a href="30268.html">Handler_Fuel</a>.
 <tr>
 <td class="asm-label"></td>
 <td class="address-1"><span id="29028"></span>29028</td>
-<td class="instruction">JP <a href="28184.html#28372">28372</a></td>
-<td class="comment-1" rowspan="1">Jump to <a href="28184.html#28372">28372</a>.</td>
+<td class="instruction">JP <a href="28184.html#28372">Handler_GameOver_8</a></td>
+<td class="comment-1" rowspan="1">Jump to <a href="28184.html#28372">Handler_GameOver_8</a>.</td>
 </tr>
 </table>
 <table class="asm-navigation">
