--- a/dec/asm/30760.html
+++ b/dec/asm/30760.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="30758.html">30758</a>
+Prev: <a href="30759.html">30759</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#30760">Map</a></td>
 <td class="next">
@@ -35,15 +35,44 @@ Next: <a href="30761.html">30761</a>
 </td>
 </tr>
 </table>
-<div class="description">30760: Game status buffer entry at 7828</div>
+<div class="description">30760: Player Input</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
+<div class="paragraph">
+Relates to the direction for the current player input. <table class="default">
+<tr>
+<th colspan="1" rowspan="1">Byte</th>
+<th colspan="1" rowspan="1">Meaning</th>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">0</td>
+<td class="centre" colspan="1" rowspan="1">No input</td>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">1</td>
+<td class="centre" colspan="1" rowspan="1">Right</td>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">2</td>
+<td class="centre" colspan="1" rowspan="1">Left</td>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">4</td>
+<td class="centre" colspan="1" rowspan="1">Down</td>
+</tr>
+<tr>
+<td class="centre" colspan="1" rowspan="1">8</td>
+<td class="centre" colspan="1" rowspan="1">Up</td>
+</tr>
+</table>
+</div>
 </div>
 </td>
 </tr>
 <tr>
+<td class="asm-label">PlayerInput</td>
 <td class="address-1"><span id="30760"></span>30760</td>
 <td class="instruction">DEFB 7</td>
 <td class="comment-0" rowspan="1"></td>
@@ -52,7 +81,7 @@ Next: <a href="30761.html">30761</a>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="30758.html">30758</a>
+Prev: <a href="30759.html">30759</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#30760">Map</a></td>
 <td class="next">
