--- a/dec/maps/all.html
+++ b/dec/maps/all.html
@@ -277,7 +277,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">128</td>
 <td class="map-c"><span id="26752"></span><a href="../asm/26752.html">26752</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26752.html">Routine at 6880</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/26752.html">Display Speedometer</a></div>
 </td>
 </tr>
 <tr>
@@ -509,7 +509,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">76</td>
 <td class="map-c"><span id="27468"></span><a href="../asm/27468.html">27468</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/27468.html">Routine at 6B4C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/27468.html">Handler: Player Movement</a></div>
 </td>
 </tr>
 <tr>
@@ -589,7 +589,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">24</td>
 <td class="map-c"><span id="28184"></span><a href="../asm/28184.html">28184</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28184.html">Routine at 6E18</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/28184.html">Handler: Game Over</a></div>
 </td>
 </tr>
 <tr>
@@ -1170,10 +1170,18 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">120</td>
+<td class="map-byte">39</td>
+<td class="map-g"><span id="30759"></span><a href="../asm/30759.html">30759</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30759.html">Game status buffer entry at 7827</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">120</td>
 <td class="map-byte">40</td>
 <td class="map-g"><span id="30760"></span><a href="../asm/30760.html">30760</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30760.html">Game status buffer entry at 7828</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30760.html">Player Input</a></div>
 </td>
 </tr>
 <tr>
@@ -1477,7 +1485,15 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">224</td>
 <td class="map-b"><span id="30944"></span><a href="../asm/30944.html">30944</a></td>
 <td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30944.html">Data block at 78E0</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30944.html">Graphics: Carousel</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">121</td>
+<td class="map-byte">0</td>
+<td class="map-b"><span id="30976"></span><a href="../asm/30976.html">30976</a></td>
+<td class="map-b-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/30976.html">Data block at 7900</a></div>
 </td>
 </tr>
 <tr>
@@ -1557,14 +1573,30 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">156</td>
 <td class="map-g"><span id="46236"></span><a href="../asm/46236.html">46236</a></td>
 <td class="map-g-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46236.html">Game status buffer entry at B49C</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46236.html">Table: Speedometer Attributes</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">180</td>
+<td class="map-byte">179</td>
+<td class="map-g"><span id="46259"></span><a href="../asm/46259.html">46259</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46259.html">Game status buffer entry at B4B3</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">180</td>
+<td class="map-byte">188</td>
+<td class="map-g"><span id="46268"></span><a href="../asm/46268.html">46268</a></td>
+<td class="map-g-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46268.html">Game status buffer entry at B4BC</a></div>
 </td>
 </tr>
 <tr>
 <td class="map-page">180</td>
 <td class="map-byte">220</td>
-<td class="map-w"><span id="46300"></span><a href="../asm/46300.html">46300</a></td>
-<td class="map-w-desc">
+<td class="map-g"><span id="46300"></span><a href="../asm/46300.html">46300</a></td>
+<td class="map-g-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46300.html">Actions Jump Table</a></div>
 </td>
 </tr>
@@ -1989,7 +2021,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">110</td>
 <td class="map-c"><span id="60526"></span><a href="../asm/60526.html">60526</a></td>
 <td class="map-c-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60526.html">Player Input</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60526.html">Player Typed Input</a></div>
 </td>
 </tr>
 <tr>
